--- a/index.html
+++ b/index.html
@@ -3,52 +3,83 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live TV Streamer</title>
+  <title>TheDaddy Streamer</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    h1 { color: #333; }
-    ul { list-style-type: none; padding: 0; }
-    li { margin: 10px 0; }
-    button { padding: 5px 10px; cursor: pointer; }
+    body { background: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 20px; }
+    h1 { text-align: center; }
+    #channels { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
+    .channel { background: #222; padding: 10px; border-radius: 5px; min-width: 150px; text-align: center; }
+    .channel button { margin-top: 5px; padding: 5px 10px; cursor: pointer; }
+    #player { display: none; text-align: center; margin-top: 20px; }
+    #loading { display: none; color: #ff0; margin-bottom: 10px; text-align: center; }
   </style>
+
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
-  <h1>Live TV Channels</h1>
-  <ul id="channel-list"></ul>
-  <div id="player" style="display:none;">
-    <video id="video-player" controls autoplay></video>
+
+  <h1>TheDaddy Streamer</h1>
+
+  <div id="loading">Loading stream...</div>
+
+  <div id="channels"></div>
+
+  <div id="player">
+    <video id="video-player" width="800" height="450" controls></video>
   </div>
 
   <script>
-    async function fetchChannels() {
-      const response = await fetch('/api/channels');
-      const channels = await response.json();
-      const list = document.getElementById('channel-list');
-      channels.forEach(channel => {
-        const li = document.createElement('li');
-        li.textContent = channel.name;
-        const button = document.createElement('button');
-        button.textContent = 'Watch';
-        button.onclick = () => playStream(channel.link);
-        li.appendChild(button);
-        list.appendChild(li);
-      });
-    }
+    async function loadChannels() {
+      try {
+        const res = await fetch('/api/channels');
+        const channels = await res.json();
 
-    async function playStream(url) {
-      const response = await fetch(`/api/stream?url=${encodeURIComponent(url)}`);
-      const data = await response.json();
-      if (data.m3u8Url) {
-        const player = document.getElementById('player');
-        const videoPlayer = document.getElementById('video-player');
-        videoPlayer.src = data.m3u8Url;
-        player.style.display = 'block';
-      } else {
-        alert('Stream not available');
+        const container = document.getElementById('channels');
+        channels.forEach(ch => {
+          const div = document.createElement('div');
+          div.className = 'channel';
+          div.innerHTML = `<strong>${ch.name}</strong><br><button onclick="playStream('${ch.link}')">Watch</button>`;
+          container.appendChild(div);
+        });
+      } catch (err) {
+        console.error(err);
+        alert('Failed to load channels');
       }
     }
 
-    fetchChannels();
+    async function playStream(url) {
+      const loading = document.getElementById('loading');
+      loading.style.display = 'block';
+
+      try {
+        const res = await fetch(`/api/stream?url=${encodeURIComponent(url)}`);
+        const data = await res.json();
+        loading.style.display = 'none';
+
+        if (!data.streamUrl) return alert('Stream not available');
+
+        const video = document.getElementById('video-player');
+        if (Hls.isSupported()) {
+          const hls = new Hls();
+          hls.loadSource(data.streamUrl);
+          hls.attachMedia(video);
+          hls.on(Hls.Events.MANIFEST_PARSED, () => video.play());
+        } else {
+          video.src = data.streamUrl;
+          video.play();
+        }
+
+        document.getElementById('player').style.display = 'block';
+      } catch (err) {
+        loading.style.display = 'none';
+        console.error(err);
+        alert('Failed to fetch stream');
+      }
+    }
+
+    // Load channels on page load
+    loadChannels();
   </script>
+
 </body>
 </html>
