--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TheDaddy Streamer</title>
   <style>
-    body { background: #111; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 20px; }
+    body { background: #111; color: #fff; font-family: Arial; margin: 0; padding: 20px; }
     h1 { text-align: center; }
     #channels { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
     .channel { background: #222; padding: 10px; border-radius: 5px; min-width: 150px; text-align: center; }
@@ -19,9 +19,7 @@
 <body>
 
   <h1>TheDaddy Streamer</h1>
-
   <div id="loading">Loading stream...</div>
-
   <div id="channels"></div>
 
   <div id="player">
@@ -77,7 +75,6 @@
       }
     }
 
-    // Load channels on page load
     loadChannels();
   </script>
 
