--- a/index.html
+++ b/index.html
@@ -3,79 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TheDaddy Streamer</title>
-  <style>
-    body { background: #111; color: #fff; font-family: Arial; margin: 0; padding: 20px; }
-    h1 { text-align: center; }
-    #channels { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
-    .channel { background: #222; padding: 10px; border-radius: 5px; min-width: 150px; text-align: center; }
-    .channel button { margin-top: 5px; padding: 5px 10px; cursor: pointer; }
-    #player { display: none; text-align: center; margin-top: 20px; }
-    #loading { display: none; color: #ff0; margin-bottom: 10px; text-align: center; }
-  </style>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <title>Live IPTV Browser</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>📺 Live IPTV Browser</h1>
+  </header>
 
-<h1>TheDaddy Streamer</h1>
-<div id="loading">Loading stream...</div>
-<div id="channels"></div>
+  <main>
+    <div id="channels"></div>
+    <div id="player-container">
+      <iframe id="player" allowfullscreen></iframe>
+    </div>
+  </main>
 
-<div id="player">
-  <video id="video-player" width="800" height="450" controls></video>
-</div>
-
-<script>
-  async function loadChannels() {
-    try {
-      const res = await fetch('/api/channels');
-      const channels = await res.json();
-
-      const container = document.getElementById('channels');
-      channels.forEach(ch => {
-        const div = document.createElement('div');
-        div.className = 'channel';
-        div.innerHTML = `<strong>${ch.name}</strong><br><button onclick="playStream('${ch.link}')">Watch</button>`;
-        container.appendChild(div);
-      });
-    } catch (err) {
-      console.error(err);
-      alert('Failed to load channels');
-    }
-  }
-
-  async function playStream(url) {
-    const loading = document.getElementById('loading');
-    loading.style.display = 'block';
-
-    try {
-      const res = await fetch(`/api/stream?url=${encodeURIComponent(url)}`);
-      const data = await res.json();
-      loading.style.display = 'none';
-
-      if (!data.streamUrl) return alert('Stream not available');
-
-      const video = document.getElementById('video-player');
-      if (Hls.isSupported()) {
-        const hls = new Hls();
-        hls.loadSource(data.streamUrl);
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, () => video.play());
-      } else {
-        video.src = data.streamUrl;
-        video.play();
-      }
-
-      document.getElementById('player').style.display = 'block';
-    } catch (err) {
-      loading.style.display = 'none';
-      console.error(err);
-      alert('Failed to fetch stream');
-    }
-  }
-
-  loadChannels();
-</script>
-
+  <script src="script.js"></script>
 </body>
 </html>
