--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live IPTV Browser</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>24/7 Channels</title>
+<style>
+  body { background:#111; color:#fff; font-family:Arial; margin:0; }
+  #channels { display:grid; grid-template-columns:repeat(auto-fill, minmax(200px, 1fr)); gap:10px; padding:20px; }
+  .channel { background:#222; padding:10px; border-radius:8px; cursor:pointer; text-align:center; }
+  iframe { width:100%; height:500px; border:none; display:block; margin-top:10px; }
+</style>
 </head>
 <body>
-  <header>
-    <h1>📺 Live IPTV Browser</h1>
-  </header>
+<h2 style="text-align:center;">📺 24/7 Channels</h2>
+<div id="channels">Loading...</div>
+<iframe id="player" allowfullscreen></iframe>
 
-  <main>
-    <div id="channels"></div>
-    <div id="player-container">
-      <iframe id="player" allowfullscreen></iframe>
-    </div>
-  </main>
-
-  <script src="script.js"></script>
+<script src="scraper.js"></script>
 </body>
 </html>
