--- a/index.html
+++ b/index.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>24/7 Channels</title>
-<style>
-  body { background:#111; color:#fff; font-family:Arial; margin:0; }
-  #channels { display:grid; grid-template-columns:repeat(auto-fill, minmax(200px, 1fr)); gap:10px; padding:20px; }
-  .channel { background:#222; padding:10px; border-radius:8px; cursor:pointer; text-align:center; }
-  iframe { width:100%; height:500px; border:none; display:block; margin-top:10px; }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Live TV Browser</title>
+  <style>
+    body { background:#111; color:#fff; font-family:sans-serif; margin:0; display:flex; }
+    #sidebar { width:300px; background:#222; overflow-y:auto; padding:10px; }
+    #channels div { padding:8px; cursor:pointer; border-bottom:1px solid #333; }
+    #channels div:hover { background:#333; }
+    #player { flex:1; display:flex; align-items:center; justify-content:center; }
+    iframe { width:100%; height:100vh; border:0; background:#000; }
+  </style>
 </head>
 <body>
-<h2 style="text-align:center;">📺 24/7 Channels</h2>
-<div id="channels">Loading...</div>
-<iframe id="player" allowfullscreen></iframe>
+  <div id="sidebar">
+    <h2>📺 Channels</h2>
+    <div id="channels">Loading...</div>
+  </div>
+  <div id="player">
+    <iframe id="iframe" src=""></iframe>
+  </div>
 
-<script src="scraper.js"></script>
+  <script>
+    async function loadChannels() {
+      try {
+        const res = await fetch("/api/scraper");
+        const channels = await res.json();
+        const list = document.getElementById("channels");
+        list.innerHTML = "";
+
+        channels.forEach(ch => {
+          const div = document.createElement("div");
+          div.textContent = ch.name;
+          div.onclick = () => {
+            if (ch.url) {
+              document.getElementById("iframe").src = ch.url;
+            } else {
+              alert("No stream URL found.");
+            }
+          };
+          list.appendChild(div);
+        });
+      } catch (err) {
+        console.error(err);
+        document.getElementById("channels").innerText = "Failed to load channels.";
+      }
+    }
+
+    loadChannels();
+  </script>
 </body>
 </html>
